--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
 
 * {
     box-sizing: border-box;
@@ -9,9 +11,10 @@ html {
 
 body{
     margin: 0;
-    background-color: $clr4;
-    // font-family: Arial, Helvetica, sans-serif;
-    font-family: 'Baloo 2', cursive;
+    // background-color: $clr4;
+    font-family: Arial, Helvetica, sans-serif;
+    // font-family: 'Roboto', sans-serif;
+    // font-family: 'Baloo 2', cursive;
 
 }
 
@@ -28,3 +31,7 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+// .App{
+//     position: relative;
+// }
