--- a/src/styles/basics/_layout.scss
+++ b/src/styles/basics/_layout.scss
@@ -10,7 +10,8 @@
 
 .main-layout {
     display: grid;
-    grid-template-columns: 1fr 1120px 1fr;
+    // grid-template-columns: 1fr 1120px 1fr;
+    grid-template-columns: $layoutPadding 1fr $layoutPadding;
     // grid-auto-columns: 100px 200px 100px;
 
     > * {
