--- a/src/styles/basics/_variables.scss
+++ b/src/styles/basics/_variables.scss
@@ -7,7 +7,8 @@ $clr4: #6b6b6b;
 $clr5: #a6a8ab;
 $clr6: #e1e1e1;
 $clr7: #f7f7f7;
-
+$clr8: #ebebeb ;
+$clr9:#dddddd;
 // LAYOUT
 $layoutPadding: 150px;
 
