--- a/src/styles/cmps/_header.scss
+++ b/src/styles/cmps/_header.scss
@@ -1,10 +1,11 @@
 .header-wrapper {
     // height: 75px;
-    padding-block: 10px;
+    padding-block: 17px;
     border-bottom: 1px solid $clr6;
     margin-bottom: 20px;
     position: sticky;
     top: 0;
+    z-index: 1;
     background-color: $clr2;
     .main-header {
         display: flex;
@@ -27,6 +28,7 @@
             padding: 4px 4px 4px 10px;
             gap: 13px;
             position: relative;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.08),0 4px 12px rgba(0,0,0,0.05);
             span{
                 font-size: rem(16px);
                 // padding-inline-end:10px;
@@ -42,6 +44,7 @@
                 cursor: pointer;
               box-shadow: 0 2px 4px rgba(0,0,0,0.18);
                 transition: box-shadow 0.2s ease;
+               
             }
 
             .dropdown-content{
