--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,3 +16,5 @@
 @import 'cmps/header';
 @import 'cmps/footer';
 @import 'cmps/stay-reservation';
+@import 'cmps/filter';
+@import 'cmps/_main-filter';
