--- a/src/styles/cmps/_stay-preview.scss
+++ b/src/styles/cmps/_stay-preview.scss
@@ -1,134 +1,52 @@
 .stay-preview {
 
-    position: relative;
+    .img-container {
+        position: relative;
+        border-radius: 20px;
 
-    .next {
-        display: none;
-        position: absolute;
-        z-index: 10;
-        top: 178px;
-        right: 0;
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-
-        svg {
-            color: $clr1;
-            font-size: rem(45px);
-        }
-    }
-
-    .prev {
-        display: none;
-        position: absolute;
-        z-index: 10;
-        top: 178px;
-        left: 0;
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-
-        svg {
-            color: $clr1;
-            font-size: rem(45px);
-        }
-    }
-
-    // .btn{
-    &:hover {
+        .prev,
         .next {
-            display: block;
+            display: none;
             position: absolute;
             z-index: 10;
-            // top: 178px;
-            top: 33%;
-            right: 2%;
+            top: 50%;
+            transform: translateY(-50%);
             background-color: rgba(255, 255, 255, 0.9);
+            box-shadow: transparent 0px 0px 0px 1px,
+                transparent 0px 0px 0px 4px, rgba(0, 0, 0, 0.18) 0px 2px 4px;
             border: none;
             border-radius: 50%;
             width: 35px;
-            height: 32px;
+            height: 35px;
             cursor: pointer;
+            align-content: center;
 
             svg {
-                display: block;
-                overflow: visible;
                 color: $clr3;
+                overflow: visible;
                 font-size: rem(23px);
             }
+        }
+
+        .next {
+            left: unset;
+            right: 2%;
         }
 
         .prev {
-            display: block;
-            position: absolute;
-            z-index: 10;
-            // top: 178px;
-            top: 33%;
+            right: unset;
             left: 2%;
-            background-color: rgba(255, 255, 255, 0.9);
-            border: none;
-            border-radius: 50%;
-            width: 35px;
-            height: 32px;
-            cursor: pointer;
-            background-clip: padding-box;
-            box-shadow: transparent 0px 0px 0px 1px,
-                transparent 0px 0px 0px 4px, rgba(0, 0, 0, 0.18) 0px 2px 4px;
-            transition: 0.25s ease 0s, 0.25s ease 0s, transform 0.25s ease 0s;
-
-            svg {
-                display: block;
-                overflow: visible;
-                color: $clr3;
-                font-size: rem(23px);
-            }
         }
     }
 
+    &:hover {
 
-    // &:hover {
-    //     .next {
-    //         display: block;
-    //         position: absolute;
-    //         z-index: 10;
-    //         // top: 178px;
-    //         top: 120px;
-    //         right: 0;
-    //         background-color: transparent;
-    //         border: none;
-    //         cursor: pointer;
-
-    //         svg {
-    //             color: $clr1;
-    //             font-size: rem(45px);
-    //         }
-    //     }
-
-    //     .prev {
-    //         display: block;
-    //         position: absolute;
-    //         z-index: 10;
-    //         // top: 178px;
-    //         top: 120px;
-    //         left: 0;
-    //         background-color: transparent;
-    //         border: none;
-    //         cursor: pointer;
-
-    //         svg {
-    //             color: $clr1;
-    //             font-size: rem(45px);
-    //         }
-    //     }
-    // }
-
-    .img-container {
-        border-radius: 20px;
-
-        // img {
-        //     // border-radius: 20px;
-        // }
+        .next,
+        .prev {
+            display: grid;
+        }
     }
+
 
     .info-container {
         display: flex;
@@ -141,20 +59,22 @@
             justify-content: space-between;
             align-items: center;
             padding-bottom: 4px;
+
             .address-info-con {
                 span {
                     font-weight: bold;
                     font-size: rem(15px);
                 }
 
-                
+
             }
 
             .rate-con {
                 display: flex;
                 align-items: center;
                 gap: 2px;
-                svg{
+
+                svg {
                     font-size: rem(16px);
                     align-self: flex-start;
                 }
